fix: picture overflow its container

--- a/src/components/upload-modal/upload-modal.scss
+++ b/src/components/upload-modal/upload-modal.scss
@@ -13,4 +13,12 @@
     width: 50%;
     left: 25%;
   }
+  .file-preview {
+    width: 90%;
+    left: 5%;
+    height: calc(100% - 10rem);
+    img {
+      max-height: 80%;
+    }
+  }
 }
